--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>Sleepy Head</li>
         <li>Short Tempered</li>
         <li>Silent</li>
-        <li>Diligent</li>
+        <li>Risk Taker</li>
         <li>Aggressive</li>
     </ul>
     
